--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,15 @@
 [nosetests]
 match=^test
-nocapture=1
+with-xunit=true
+xunit-file=nosexunit.xml
+
+# coverage
+with-coverage=true
 cover-package=mathclass
-with-coverage=1
-cover-erase=1
+cover-inclusive=true
+cover-erase=true
+cover-branches=true
+cover-xml=true
+cover-xml-file=coverage.xml
+with-xcoverage=true
+xcoverage-file=xcoverage.xml
