--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,3 @@
 [nosetests]
 match=^test
-with-xunit=true
-xunit-file=nosexunit.xml
-
-# coverage
-with-coverage=true
-cover-package=mathclass
-cover-inclusive=true
-cover-erase=true
-cover-branches=true
-cover-xml=true
-cover-xml-file=coverage.xml
+verbosity=0
