--- a/development.ini
+++ b/development.ini
@@ -7,7 +7,7 @@
 use = egg:mathclass
 
 pyramid.reload_templates = true
-pyramid.debug_authorization = false
+pyramid.debug_authorization = true
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
@@ -15,12 +15,23 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
     pyramid_jinja2
+    pyramid_beaker
 
 sqlalchemy.url = sqlite:///%(here)s/mathclass.sqlite
+
+velruse.google.realm = http://localhost:6543
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
+
+session.type = cookie
+session.encrypt_key = aaaa
+session.httponly = true
+session.validate_key = bbbb
+
+auth.admins =
+    steven
 
 ###
 # wsgi server configuration
@@ -57,7 +68,7 @@ propagate = 0
 
 [logger_sqlalchemy]
 level = INFO
-handlers = console, file
+handlers = console
 qualname = sqlalchemy.engine
 propagate = 0
 # "level = INFO" logs SQL queries.
