--- a/production.ini
+++ b/production.ini
@@ -14,10 +14,22 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
     pyramid_jinja2
+    pyramid_beaker
 
 pyramid.cache_max_age = 3600
 
 sqlalchemy.url = sqlite:///%(here)s/mathclass.sqlite
+
+velruse.google.realm = https://highlig.ht/mathclass
+
+session.type = cookie
+session.encrypt_key = whjyKCtnTJytzYXQcpdmFjUmP5hWYkalhnZQjt4VBMg=
+session.httponly = true
+session.secure = true
+session.validate_key = 6iHzbKMfSomfeykC3uoYPKHNpPMq5EsfmuC3FSrbdT0=
+
+auth.admins =
+    steven
 
 [uwsgi]
 socket = /tmp/mathclass.sock
